--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
   <body class="bg-[#1A0B2E] text-white border-b border-b-gray-700 p-0 m-0">
     <!-- HEADER SECTION  -->
     <header
-      class="max-sm:justify-between px-[200px] max-xl:px-[100px] max-lg:px-5 mx-auto py-6 max-sm:py-4 max-w-[1600px] flex items-center justify-around border-b border-gray-700"
+      class="px-[200px] max-xl:px-[100px] max-lg:px-5 mx-auto py-6 max-sm:py-4 max-w-[1600px] flex items-center justify-between border-b border-gray-700"
     >
       <h1
         class="font-bold max-sm:font-semibold text-5xl max-lg:text-3xl max-sm:text-2xl"
       >
         Tech<span
-          class="bg-linear-to-bl from-violet-600 from-30% to-yellow-300 to-95% via-pink-600 via-60% bg-clip-text text-transparent"
+          class="animated-gradient bg-linear-to-bl from-violet-600 from-30% to-yellow-300 to-95% via-pink-600 via-60% bg-clip-text text-transparent"
           >Wave</span
         >
       </h1>
 
       <nav class="group relative">
         <ul
-          class="max-sm:absolute max-sm:-left-16 max-sm:mt-10 max-sm:w-20 max-sm:invisible max-sm:opacity-0 z-20 max-sm:py-3.5 max-sm:bg-[#1A0B2E] max-sm:border rounded-xl max-sm:*:space-y-3 group-focus::opacity-100 group-hover:visible transition-all duration-200 flex items-center justify-around gap-8 max-sm:gap-1.5 max-sm:flex-col"
+          class="max-sm:absolute max-sm:-left-[210px] max-sm:mt-10 max-sm:w-[250px] max-sm:invisible max-sm:opacity-0 z-20 max-sm:py-3.5 max-sm:bg-[#1A0B2E] max-sm:border rounded-xl max-sm:space-y-5 group-hover:opacity-100 group-hover:visible transition-all duration-200 flex items-center justify-around gap-8 max-sm:gap-1.5 max-sm:flex-col"
         >
           <li>
             <a
@@ -55,6 +55,7 @@
           <i class="fa-solid fa-bars text-white"></i>
         </button>
       </nav>
+
       <button
         type="button"
         class="max-sm:hidden bg-linear-to-bl from-violet-600 from-20% to-yellow-300 to-90% via-pink-600 via-50% text-white font-normal text-base text-center capitalize rounded-full py-3 max-lg:py-1.5 px-4 max-lg:px-2"
@@ -73,7 +74,7 @@
         <!-- Image -->
         <div class="flex justify-center relative">
           <p
-            class="absolute top-3 right-5 text-lg max-xl:top-0 max-xl:right-5 max-lg:right-0 max-sm:right-0 max-xl:text-lg font-semibold rounded-4xl bg-green-500 text-black py-2 px-4 max-xl:py-1 max-xl:px-3 text-center drop-shadow-xl/50 drop-shadow-green-500"
+            class="animate-bounce absolute top-3 right-5 text-lg max-xl:top-0 max-xl:right-5 max-lg:right-0 max-sm:right-0 max-xl:text-lg font-semibold rounded-4xl bg-green-500 text-black py-2 px-4 max-xl:py-1 max-xl:px-3 text-center drop-shadow-xl/50 drop-shadow-green-500"
           >
             NEW
           </p>
